# OrderBook

./: ARCHITECTURE.md  Cargo.toml  README.md  engine.md
src/: lib.rs  main.rs
src/engine/: engine.rs
src/handlers/: auth.rs  market.rs  mod.rs  orders.rs  user.rs
src/messages/: commands.rs
src/orderbook/: depth.rs  market_matching.rs  matching.rs  mod.rs  orderbook.rs  price_level.rs  settlement.rs
src/state/: app_state.rs  mod.rs
src/types/: mod.rs  order.rs  price.rs  quantity.rs  trade.rs  user.rs
src/utils/: auth.rs  error.rs  middleware.rs  mod.rs
