[package]
name = "Orderbook"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
actix-web-httpauth = "0.8"
anyhow = "1.0.100"
bcrypt = "0.17.1"
chrono = { version = "0.4.42", features = ["serde"] }
env_logger = "0.11"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
